# advent-of-code-ml

./: .gitignore  LICENSE  README.md  advent_of_code.opam  dune-project
2015/: Day01.ml  Day01_test.ml  Day02.ml  Day02_test.ml  Day03.ml  Day03_test.ml  Day04.ml  Day04_test.ml  Day05.ml  Day05_test.ml  Day06.ml  Day06_test.ml  Day07.ml  Day07_test.ml  Day08.ml  Day08_test.ml  Main.ml  dune
2024/: Day01.ml  Day01_test.ml  Day02.ml  Day02_test.ml  Main.ml  dune
base/: Base.ml  dune
