(executable
 (public_name 2015)
 (name Main)
 (libraries Base))

(test
 (name Day01_test)
 (modules Day01 Day01_test)
 (libraries Base alcotest))

(test
 (name Day02_test)
 (modules Day02 Day02_test)
 (libraries Base alcotest))

(test
 (name Day03_test)
 (modules Day03 Day03_test)
 (libraries Base alcotest))

(test
 (name Day04_test)
 (modules Day04 Day04_test)
 (libraries Base alcotest))

(test
 (name Day05_test)
 (modules Day05 Day05_test)
 (libraries Base alcotest))

(test
 (name Day06_test)
 (modules Day06 Day06_test)
 (libraries Base alcotest))

(test
 (name Day07_test)
 (modules Day07 Day07_test)
 (libraries Base alcotest))
